# financial_modeling

./: README.md  pyproject.toml
notebooks/: 1_fmp_api_setup.ipynb
notebooks/fmp_api/: fmp.py
tests/: fmp.py
