[project]
name = "financial-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "Kazi Shahria",email = "kazirshahria@gmail.com"}
]
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "pymongo[srv] (==3.12)",
    "yfinance (>=0.2.66,<0.3.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
